--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.0"
 
     defaultConfig {
-        applicationId "com.eemc.aida"
+        applicationId "com.skytnt.elfbox"
         minSdkVersion 14
         targetSdkVersion 21
         versionCode 1
