--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,14 @@
 	
     <application
 		android:name=".App"
+	    android:largeHeap="true"
         android:icon="@mipmap/aida_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
             android:label="@string/app_name"
             android:name=".MainActivity"
-			android:process=":com.eemc.aida.mainactivity"
+			android:process=":com.skytnt.elfbox.mainactivity"
 			>
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
@@ -20,13 +21,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-		<activity android:name=".AIDAActivity"
-			android:label="AIDA"
-			android:process=":com.eemc.aida.aidaactivity">
+		<activity android:name=".DisasmActivity"
+			android:label="Disasm"
+		    android:process=":com.skytnt.elfbox.disasmactivity"
+			>
     	</activity>
 		<activity android:name=".CrashActivity"
 			android:label="Crash"
-			android:process=":com.eemc.aida.crashactivity">
+		    android:process=":com.skytnt.elfbox.crashactivity"
+			>
     	</activity>
 	</application>
 
