--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,11 @@
 		    android:process=":com.skytnt.elfbox.disasmactivity"
 			>
     	</activity>
+	<activity android:name=".FileChooserActivity"
+	    android:label="FileChooser"
+	    android:process=":com.skytnt.elfbox.filechooseractivity"
+	>
+    	</activity>
 		<activity android:name=".CrashActivity"
 			android:label="Crash"
 		    android:process=":com.skytnt.elfbox.crashactivity"
